--- a/app/src/main/res/layout/fragment_change_foto_profilo.xml
+++ b/app/src/main/res/layout/fragment_change_foto_profilo.xml
@@ -17,7 +17,8 @@
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/old_image_profile" />
 
     <ImageView
         android:id="@+id/iv_foto_profilo_nuovo"
@@ -30,43 +31,52 @@
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_foto_profilo_attuale" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_foto_profilo_attuale"
+        android:contentDescription="@string/new_image_profile" />
 
-    <Button
-        android:id="@+id/btn_image_camera"
-
-        android:layout_width="130dp"
+    <LinearLayout
+        android:id="@+id/ll_button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="50dp"
-
-
-        android:text="@string/add_image_from_camera"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_foto_profilo_nuovo" />
-
-    <Button
-        android:id="@+id/btn_image_gallery"
-
-        android:layout_width="130dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="50dp"
-
-        android:text="@string/add_image_from_files"
-
+        android:layout_marginHorizontal="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_foto_profilo_nuovo" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_foto_profilo_nuovo">
+
+        <Button
+            android:id="@+id/btn_image_camera"
+
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            style="@style/primaryStyleButton"
+            android:layout_weight="1"
+
+            android:text="@string/add_image_from_camera" />
+
+        <Button
+            android:id="@+id/btn_image_gallery"
+
+            android:layout_width="0dp"
+
+            style="@style/primaryStyleButton"
+
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_weight="1"
+
+            android:text="@string/add_image_from_files" />
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_foto_profilo_nuovo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/btn_image_gallery"
-        app:layout_constraintStart_toStartOf="@+id/btn_image_camera"
-        app:layout_constraintTop_toBottomOf="@+id/btn_image_camera">
+        app:layout_constraintEnd_toEndOf="@+id/ll_button"
+        app:layout_constraintStart_toStartOf="@+id/ll_button"
+        app:layout_constraintTop_toBottomOf="@+id/ll_button">
 
 
         <Button
@@ -76,6 +86,8 @@
             android:layout_height="wrap_content"
 
             android:text="@string/confirm"
+
+            style="@style/primaryStyleButton"
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
