--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -18,7 +18,8 @@
             android:src="@drawable/logo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/logo_image" />
 
         <EditText
             android:id="@+id/et_email_login"
@@ -36,7 +37,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_logo" />
+            app:layout_constraintTop_toBottomOf="@+id/image_logo"
+            android:autofillHints="AUTOFILL_HINT_USERNAME" />
 
         <EditText
             android:id="@+id/et_password_login"
@@ -54,7 +56,8 @@
             app:layout_constraintEnd_toEndOf="@id/et_email_login"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/et_email_login"
-            app:layout_constraintTop_toBottomOf="@id/et_email_login" />
+            app:layout_constraintTop_toBottomOf="@id/et_email_login"
+            android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_login"
