--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,35 +10,36 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
         <ImageView
             android:id="@+id/image_logo"
             android:layout_width="200dp"
             android:layout_height="200dp"
+            android:layout_marginTop="60dp"
+            android:contentDescription="@string/logo_image"
             android:src="@drawable/logo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/logo_image" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/et_email_login"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"
+            android:layout_marginTop="60dp"
 
+            android:layout_marginEnd="40dp"
+            android:autofillHints="AUTOFILL_HINT_USERNAME"
             android:drawableStart="@drawable/ic_email"
+
             android:drawablePadding="8dp"
             android:ems="10"
-
             android:hint="@string/email_address"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_logo"
-            android:autofillHints="AUTOFILL_HINT_USERNAME" />
+            app:layout_constraintTop_toBottomOf="@+id/image_logo" />
 
         <EditText
             android:id="@+id/et_password_login"
