--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,14 +8,14 @@
     android:paddingBottom="24dp">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
 
         <ImageView
             android:id="@+id/image_logo"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:src="@drawable/logo"
+            android:src="?attr/logo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
