--- a/app/src/main/res/drawable/shape_text_view_receive.xml
+++ b/app/src/main/res/drawable/shape_text_view_receive.xml
@@ -1,8 +1,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/midGray"/>
-            <corners android:radius="10dp"/>
+            <solid android:color="?attr/colorSecondary"/>
+            <corners android:radius="20dp"/>
             <padding android:bottom="10dp"/>
             <padding android:left="10dp"/>
             <padding android:right="10dp"/>
