--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,9 +8,7 @@
     android:paddingBottom="24dp">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
+    android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/image_logo"
             android:layout_width="200dp"
