Pulizia codice finale

--- a/app/src/main/res/layout/fragment_nuovo_annuncio_camera.xml
+++ b/app/src/main/res/layout/fragment_nuovo_annuncio_camera.xml
@@ -17,7 +17,8 @@
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/image_of_chosen_photo" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
