--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -18,7 +18,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -40,15 +40,15 @@
 
                 android:layout_marginStart="48dp"
                 android:layout_marginEnd="48dp"
+                android:drawableStart="@drawable/ic_baseline_person_24"
+                android:drawablePadding="8dp"
                 android:ems="10"
                 android:hint="@string/name"
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-
-                android:drawableStart="@drawable/ic_baseline_person_24"
-                android:drawablePadding="8dp"
 
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,10 +61,10 @@
                 android:layout_marginStart="48dp"
                 android:layout_marginTop="32dp"
 
-                android:drawableStart="@drawable/ic_baseline_person_24"
-                android:drawablePadding="8dp"
-
                 android:layout_marginEnd="48dp"
+                android:drawableStart="@drawable/ic_baseline_person_24"
+
+                android:drawablePadding="8dp"
                 android:ems="10"
                 android:hint="@string/surname"
                 android:inputType="textPersonName"
